# devops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CI.md  Jenkinsfile  Makefile  PYTHON.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release.yaml
IaC/terraform/: README.md  access_control.tf  example.tfvars  instance.tf  network.tf  provider.tf  variables.tf
IaC/vagrant/: README.md  Vagrantfile
ansible/: ansible.cfg  install-docker.yml  provision_app.yml  requirements.txt  requirements.yml
ansible/inventory/: aws_ec2.yml  inventory_aws_ec2.yml
ansible/roles/deploy-app/tasks/: main.yml
ansible/roles/deploy_app/: README.md
ansible/roles/deploy_app/defaults/: main.yml
ansible/roles/deploy_app/meta/: main.yml
ansible/roles/deploy_app/tasks/: main.yml
ansible/roles/deploy_app/template/: docker-compose.yml.j2
ansible/roles/docker-install-ubuntu20/defaults/: main.yml
ansible/roles/ubuntu20_docker_install/: README.md
ansible/roles/ubuntu20_docker_install/defaults/: main.yml
ansible/roles/ubuntu20_docker_install/tasks/: docker-compose.yml  main.yml  prepare.yml  python-libs.yml
app_python/: __init__.py  config.py  main.py
app_python/routers/: __init__.py  time.py  visits.py
docker/: DOCKER.md  Dockerfile  README.md  docker-compose.yaml  example.env
k8s/: 11.md  12.md  13.md  14.md  deployment.yml  readme.md  services.yml
k8s/app-python-chart/: Chart.yaml  secrets.yaml  values.yaml
k8s/app-python-chart/templates/: configmap.yaml  deployment.yaml  satefulset.yaml  secrets.yaml
monitoring/: LOGGING.md  docker-compose.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
terraform/: README.md  provider.tf  vbox.tf  versions.tf
terraform_vbox/: main.tf
tests/: conftest.py  test_time.py
